Made top bar fixed so window controls and team info are always visible

--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ header h2{
 .title{
   text-align:right;
   font-size:20px;
-	width:15%;
+	width:15% !important;
 }
 
 .spacer{
